--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,35 @@
 }
 body {
     font-family: 'Poppins', sans-serif;
+    height: 100vh;
+    background-color: #f5f5f5;
+    color: #333;
+    line-height: 1.6;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
 }
 h1 {
     font-size: 50px;
     font-weight: 600;
     text-align: center;
-    margin-bottom: 20px;
-    margin-top: 20px;
+}
+#game-board {
+    width: 500px;
+    height: 500px;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    border: 2px solid #333;
+    user-select: none;
+}
+.cell {
+    border: 2px solid #333;
+    font-size: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 }
