--- a/styles.css
+++ b/styles.css
@@ -9,24 +9,23 @@ body {
     background-color: #f5f5f5;
     color: #333;
     line-height: 1.6;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 50px;
+    text-align: center;
 }
 h1 {
     font-size: 50px;
     font-weight: 600;
     text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 #game-board {
     width: 500px;
     height: 500px;
+    border: 2px solid #333;
+    margin: 0 auto;
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     grid-template-columns: repeat(3, 1fr);
-    border: 2px solid #333;
     user-select: none;
 }
 .cell {
@@ -36,4 +35,16 @@ h1 {
     justify-content: center;
     align-items: center;
     cursor: pointer;
+}
+button {
+    display: none;
+    border-radius: 5px;
+    border: 2px solid #333;
+    background-color: #f5f5f5;
+    color: #333;
+    font-size: 18px;
+    font-weight: 600;
+    padding: 10px;
+    cursor: pointer;
+    margin: 20px auto;
 }
