--- a/styles.css
+++ b/styles.css
@@ -1,50 +1,58 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 body {
-    font-family: 'Poppins', sans-serif;
-    height: 100vh;
-    background-color: #f5f5f5;
-    color: #333;
-    line-height: 1.6;
-    text-align: center;
+  font-family: "Poppins", sans-serif;
+  height: 100%;
+  padding: 0 20px;
+  overflow: hidden;
+  background-color: #f5f5f5;
+  color: #333;
+  line-height: 1.6;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 h1 {
-    font-size: 50px;
-    font-weight: 600;
-    text-align: center;
-    margin-bottom: 20px;
-    margin-top: 20px;
+  font-size: 50px;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 #game-board {
-    width: 500px;
-    height: 500px;
-    border: 2px solid #333;
-    margin: 0 auto;
-    display: grid;
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(3, 1fr);
-    user-select: none;
+  width: 90vw;
+  height: 90vw;
+  max-width: 500px;
+  max-height: 500px;
+  border: 2px solid #333;
+  margin: 0 auto;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  user-select: none;
 }
+
 .cell {
-    border: 2px solid #333;
-    font-size: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+  border: 2px solid #333;
+  font-size: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 button {
-    display: none;
-    border-radius: 5px;
-    border: 2px solid #333;
-    background-color: #f5f5f5;
-    color: #333;
-    font-size: 18px;
-    font-weight: 600;
-    padding: 10px;
-    cursor: pointer;
-    margin: 20px auto;
+  display: none;
+  border-radius: 5px;
+  border: 2px solid #333;
+  background-color: #f5f5f5;
+  color: #333;
+  font-size: 18px;
+  font-weight: 600;
+  padding: 10px;
+  cursor: pointer;
+  margin: 20px auto;
 }
